--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: 42.157.195.242, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇻🇳 越南-3.93MB/s(Youtube:不良林), server: 103.173.255.228, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.230, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-667.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-634.6KB/s(Youtube:不良林), server: 14.152.92.81, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-322.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.228, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇻🇳 越南-382.4KB/s(Youtube:不良林), server: 103.173.255.127, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-675.3KB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-4.25MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30120, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 14.152.92.79, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-375.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-731.9KB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-688.5KB/s(Youtube:不良林), server: 42.157.195.235, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-373.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.62MB/s(Youtube:不良林), server: 43.129.175.128, port: 20010, type: vmess, uuid: 022fef82-1b48-440b-a7e0-a47dc6bde5b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-634.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-675.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-731.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-688.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-634.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-675.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-731.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-688.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-634.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-675.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-731.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-688.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-634.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-675.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-731.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-688.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-634.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-675.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-731.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-688.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-634.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-675.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-731.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-688.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-634.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-675.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-375.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-731.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-688.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-373.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
