--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-529.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-382.4KB/s(Youtube:不良林), server: 103.173.255.127, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.62MB/s(Youtube:不良林), server: 43.129.175.128, port: 20010, type: vmess, uuid: 022fef82-1b48-440b-a7e0-a47dc6bde5b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-583.0KB/s(Youtube:不良林), server: 42.157.195.231, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-420.8KB/s(Youtube:不良林), server: 42.157.195.235, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1013.3KB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-639.4KB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-392.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.53MB/s(Youtube:不良林), server: 103.147.126.86, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.147.126.86}}
-  - {name: 🇨🇳 中国-553.9KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-425.9KB/s(Youtube:不良林), server: 42.157.195.240, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇫🇷 法国-960.6KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.234, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-851.9KB/s(Youtube:不良林), server: 42.157.195.228, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-437.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-380.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-471.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-529.2KB/s(Youtube:不良林)
-      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-529.2KB/s(Youtube:不良林)
-      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-529.2KB/s(Youtube:不良林)
-      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-529.2KB/s(Youtube:不良林)
-      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-529.2KB/s(Youtube:不良林)
-      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-529.2KB/s(Youtube:不良林)
-      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-529.2KB/s(Youtube:不良林)
-      - 🇻🇳 越南-382.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-583.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.0KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
