--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1013.3KB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-639.4KB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-425.9KB/s(Youtube:不良林), server: 42.157.195.240, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇫🇷 法国-960.6KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.234, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2, server: 14.152.92.72, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-955.3KB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-851.9KB/s(Youtube:不良林), server: 42.157.195.228, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-437.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-380.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-471.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇰🇷 韩国-1.19MB/s(Youtube:不良林), server: 13.209.18.199, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-955.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-955.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-955.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-955.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-955.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-955.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1013.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-639.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-960.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-955.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-380.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
